# kodo-rlnc-c

./: .gitignore  CMakeLists.txt  NEWS.rst  README.rst  buildbot.py  config.py  giit.json  resolve.json  wscript
docs/: conf.py  including_kodo_rlnc_c.rst  index.rst  quick_start_kodo_rlnc_c.rst  requirements.txt
docs/api/: api.rst  decoder.rst  encoder.rst
docs/examples/: encode_decode_on_the_fly.rst  encode_decode_simple.rst  examples.rst  udp_sender_receiver.rst
examples/encode_decode_on_the_fly/: encode_decode_on_the_fly.c  wscript_build
examples/encode_decode_simple/: encode_decode_simple.c  wscript_build
examples/encode_decode_using_coefficients/: encode_decode_using_coefficients.c  wscript_build
examples/sparse_seed/: sparse_seed.c  wscript_build
examples/switch_systematic_on_off/: switch_systematic_on_off.c  wscript_build
examples/symbol_status_updater/: symbol_status_updater.c  wscript_build
examples/udp_sender_receiver/: udp_receiver.c  udp_sender.c  wscript_build
examples/uncoded_symbols/: uncoded_symbols.c  wscript_build
examples/use_log_layers/: use_log_layers.c  wscript_build
examples/use_trace_layers/: use_trace_layers.c  wscript_build
src/kodo_rlnc_c/: common.h  convert_enums.hpp  decoder.cpp  decoder.h  encoder.cpp  encoder.h  kodo_rlnc_c.cpp  kodo_rlnc_c.h  on_the_fly_decoder_stack.hpp  on_the_fly_encoder_stack.hpp
test/: wscript_build
test/src/: test_coders.cpp  test_decoder.cpp  test_encoder.cpp  test_kodo_rlnc_c.cpp
